jar attribute is URL, not file path